Divide Inbox and Message content into 2 columns; also avoid wasting white space on the right side when message is not open

--- a/angular/src/app/modules/messaging/messaging.component.css
+++ b/angular/src/app/modules/messaging/messaging.component.css
@@ -4,19 +4,26 @@
 
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
-  #inbox.message-open {
+  #inbox.message-open,
+  #inbox-buttons.message-open {
     display: none;
-  } 
+  }
+}
+
+@media (min-width: 768px) {
+  .col-md-5 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 41.666667%;
+    flex: 0 0 41.666667%;
+    max-width: 41.666667% !important;
+  }
+}
+
+/* Avoid wasting white space on the right side when message is not open */
+#inbox:not(.message-open) {
+  max-width: 100% !important;
 }
 
 .table-hover tr {
   cursor: pointer;
-}
-
-tr.collapsing {
-  
-}
-
-tr.collapse:not(.show) {
-  display: none !important;
 }
